# mirror

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yaml  release.yaml
config/: config.json  github.avatar.json  github.raw.json  github.releases.json  mirror.json  unpkg.json
src/: config.rs  error.rs  geo.rs  http_utils.rs  main.rs  proxy.rs  server.rs  stats.rs  sync.rs
src-ts/: config.ts  geo.ts  http.ts  log.ts  proxy.ts  server.ts  stats.ts  types.ts
src-ts/routes/: avatar.ts  mirror.ts  raw.ts  releases.ts  unpkg.ts
src/routes/: avatar.rs  mirror.rs  mod.rs  raw.rs  releases.rs  unpkg.rs
test/: geo.test.ts  server.test.ts
webui/: index.html  package.json  vite.config.ts
webui/src/: App.vue  main.ts  shims-motion.d.ts
webui/src/components/: FeatureBadges.vue  FooterSection.vue  GlassBackdrop.vue  GlassPanel.vue  HeroSection.vue  RouteList.vue
webui/src/composables/: useLinkTransform.ts
webui/src/i18n/: index.ts
webui/src/i18n/locales/: en.ts  zh-CN.ts
webui/src/styles/: _variables.scss  global.scss
